add logo to restaurant
